--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "cross-env NODE_ENV=production node ./src/main.js",
-    "dev": "cross-env NODE_ENV=development nodemon ./src/main.js"
+    "start": "cross-env NODE_ENV=production node ./main.js",
+    "dev": "cross-env NODE_ENV=development nodemon ./main.js"
   },
   "keywords": [],
   "author": "",
