--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "config": "^3.3.9",
     "fluent-ffmpeg": "^2.1.2",
     "openai": "^4.24.1",
-    "telegraf": "^4.15.3"
+    "pdf-parse": "^1.1.1",
+    "telegraf": "^4.15.3",
+    "textract": "^2.5.0",
+    "xlsx": "^0.18.5"
   }
 }
